fixed a text issue when there is too much text on the screeen

--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -63,10 +63,17 @@ li:first-child{
   /* Ensure the overlay is on top */
 }
 
-#questionText {
-  text-align: center;
-  margin-bottom: 200px;
-  /* Add some space between the text and the close button */
+#topOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: rgb(89, 20, 248);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow:auto;
 }
 
 #bottomOverlay {
@@ -83,9 +90,10 @@ li:first-child{
 
 #closeButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  color: white;
-  font-size: 18px;
+  top: 20px;
+  right: 20px;
+  color: rgb(0, 0, 0);
+  font-size: 50px;
+  font-weight: bold;
   cursor: pointer;
 }
